--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "5.3.0",
-    "fastify": "^4.23.2"
+    "fastify": "^4.23.2",
+    "zod": "^3.22.2"
   }
 }
